@@ -16,7 +16,8 @@ user-visible CHANGES:
 
 under the hood:
 + moved quantile integration methods for expectation for Weibull and
-  Gamma distribution from pkg RobExtremes to distrEx 
+  Gamma distribution from pkg RobExtremes to distrEx; this is now also used
+  for Cauchy distributions  
 + introduce exported helper function .qtlIntegrate  to achieve this
   (is reused in RobExtremes for the GEV methods there)
 + cleaned .Rd file E.Rd: It contained still some references to methods
